<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
              android:background="@color/gray"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context=".ui.activities.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone"/>

    <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <ImageView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_gravity="center"
                       android:layout_marginTop="80dp"
                       android:layout_marginBottom="20dp"
                       android:src="@drawable/ic_logo"/>

            <LinearLayout android:layout_width="match_parent"
                          android:gravity="center"
                            android:layout_height="wrap_content">

                <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_margin="10dp"
                        android:layout_marginBottom="30dp"
                        android:src="@drawable/ic_people_outline_black_24dp"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:textColorHint="@color/white"
                    android:outlineAmbientShadowColor="@color/white"
                    android:outlineSpotShadowColor="@color/white"
                    app:boxBackgroundColor="@color/white"
                    app:boxStrokeColor="@color/white"
                    android:layout_height="wrap_content">

                <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/agent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        app:met_baseColor="@color/white"
                        app:met_underlineColor="@color/white"
                        app:met_textColor="@color/white"
                        android:textColorHighlight="@color/white"
                        app:met_helperTextColor="@color/white"
                        app:met_textColorHint="@color/white"
                        app:met_primaryColor="@color/white"
                        app:met_errorColor="@color/pink"
                        app:met_floatingLabelTextColor="@color/white"
                        android:hint="@string/prompt_email"/>

            </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        <LinearLayout android:layout_width="match_parent"
                      android:gravity="center"
                      android:layout_height="wrap_content">

            <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/ic_lock_black_24dp"/>


            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:textColorHint="@color/white"
                    android:outlineAmbientShadowColor="@color/white"
                    android:outlineSpotShadowColor="@color/white"
                    app:boxBackgroundColor="@color/white"
                    app:boxStrokeColor="@color/white"
                    android:layout_height="wrap_content">

                <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        app:met_baseColor="@color/white"
                        app:met_underlineColor="@color/white"
                        app:met_textColor="@color/white"
                        android:textColorHighlight="@color/white"
                        app:met_helperTextColor="@color/white"
                        app:met_textColorHint="@color/white"
                        app:met_primaryColor="@color/white"
                        app:met_errorColor="@color/pink"
                        android:inputType="textPassword"
                        app:met_floatingLabelTextColor="@color/white"
                        android:hint="@string/prompt_password"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

            <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:layout_marginTop="36dp"
                    android:text="@string/action_sign_in"
                    android:textStyle="bold"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>