<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View" />
        <variable name="listener"
                  type="android.view.View.OnClickListener"/>
        <variable name="viewModel"
                  type="com.vodrex.login_sample.viewmodel.PaymentsViewModel"/>
    </data>


    <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/gray"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    tools:context=".ui.activities.LoginActivity">

        <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:title = ""
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/margin_micro"
                    android:src="@drawable/ic_logo"/>
        </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
                android:id="@+id/login_form"
                android:layout_below="@+id/appBarLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <ImageView android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_gravity="center"
                           android:layout_marginTop="80dp"
                           android:layout_marginBottom="20dp"
                           android:imageUrl="@{viewModel.imagePath}"
                           tools:src="@drawable/ic_logo"/>

                <LinearLayout android:layout_width="match_parent"
                              android:gravity="center"
                              android:layout_height="wrap_content">

                    <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_margin="10dp"
                            android:layout_marginBottom="30dp"
                            android:src="@drawable/ic_local_phone_black_24dp"/>

                    <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:textColorHint="@color/white"
                            android:outlineAmbientShadowColor="@color/white"
                            android:outlineSpotShadowColor="@color/white"
                            app:boxBackgroundColor="@color/white"
                            app:boxStrokeColor="@color/white"
                            android:layout_height="wrap_content">

                        <com.rengwuxian.materialedittext.MaterialEditText
                                android:id="@+id/phone_number"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/white"
                                app:met_baseColor="@color/white"
                                app:met_underlineColor="@color/white"
                                app:met_textColor="@color/white"
                                android:textColorHighlight="@color/white"
                                app:met_helperTextColor="@color/white"
                                app:met_textColorHint="@color/white"
                                app:met_primaryColor="@color/white"
                                app:met_errorColor="@color/pink"
                                android:inputType="phone"
                                app:met_floatingLabelTextColor="@color/white"
                                android:hint="@string/prompt_phone"/>

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout android:layout_width="match_parent"
                              android:gravity="center"
                              android:layout_height="wrap_content">

                    <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_margin="10dp"
                            android:src="@drawable/ic_lock_black_24dp"/>


                    <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:textColorHint="@color/white"
                            android:outlineAmbientShadowColor="@color/white"
                            android:outlineSpotShadowColor="@color/white"
                            app:boxBackgroundColor="@color/white"
                            app:boxStrokeColor="@color/white"
                            android:layout_height="wrap_content">

                        <com.rengwuxian.materialedittext.MaterialEditText
                                android:id="@+id/amount"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/white"
                                app:met_baseColor="@color/white"
                                app:met_underlineColor="@color/white"
                                app:met_textColor="@color/white"
                                android:textColorHighlight="@color/white"
                                app:met_helperTextColor="@color/white"
                                app:met_textColorHint="@color/white"
                                app:met_primaryColor="@color/white"
                                app:met_errorColor="@color/pink"
                                app:met_floatingLabelTextColor="@color/white"
                                android:inputType="numberDecimal"
                                android:hint="@string/prompt_cash"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <Button
                        android:id="@+id/email_sign_in_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_background"
                        android:layout_marginTop="36dp"
                        android:onClick="@{(v)-> listener.onClick(v)}"
                        android:text="@string/action_continue"
                        android:textStyle="bold"/>

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</layout>